Closed Bug 337634 Opened 19 years ago Closed 19 years ago

Fix url classifier bustage caused by threadmanager landing

Categories

(Toolkit :: Safe Browsing, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

Attachments

(1 file)

Fix url classifier bustage caused by threadmanager landing
Attached patch v1 patchSplinter Review
I've only confirmed that this patch compiles. I don't know how to test it properly. Please point me in the right direction :)
Attachment #221742 - Flags: review?(tony)
Comment on attachment 221742 [details] [diff] [review] v1 patch Looks much cleaner and easier to understand. Thanks.
Attachment #221742 - Flags: review?(tony) → review+
fixed-on-trunk
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Product: Firefox → Toolkit
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: