fixes bug 337634 "Fix url classifier bustage caused by threadmanager landing" r=tony